--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "riji"
 description = "Scripting environment using rhai"
-version = "0.1.6"
+version = "0.1.7"
 authors = ["Sören Meier <info@s-me.ch>"]
 repository = "https://github.com/fire-lib/riji"
 edition = "2021"
@@ -11,14 +11,14 @@ license = "MIT OR Apache-2.0"
 lto = true
 
 [dependencies]
-rhai = { version = "1.6.1", features = ["no_float", "only_i64", "no_closure", "internals", "metadata"] }
-git2 = "0.14.4"
+rhai = { version = "1.9", features = ["no_float", "only_i64", "no_closure", "internals", "metadata"] }
+git2 = "0.15"
 regex = "1.5.4"
-uuid = { version = "0.8", features = ["v4"] }
+uuid = { version = "1.1", features = ["v4"] }
 dunce = "1.0"
 toml = "0.5"
 
-# panting
+# painting
 ansi_term = "0.12.1"
 ctor = "0.1.9"
 output_vt100 = "0.1.2"
