--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -57,7 +57,7 @@ jobs:
           release_name: Release ${{ github.ref }}
 
       - name: Upload Release Asset
-        id: upload-release-asset 
+        id: upload-release-asset-windows 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -68,7 +68,7 @@ jobs:
           asset_content_type: application/octet-stream
 
       - name: Upload Release Asset
-        id: upload-release-asset 
+        id: upload-release-asset-linux 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
