--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ regex = "1.5.4"
 uuid = { version = "1.1", features = ["v4"] }
 dunce = "1.0"
 toml = "0.7"
+rand = "0.8"
 
 # painting
 ansi_term = "0.12.1"
