--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "riji"
 description = "Scripting environment using rhai"
-version = "0.1.12"
-authors = ["Sören Meier <info@s-me.ch>"]
+version = "0.1.13"
+authors = ["Sören Meier <info@soerenmeier.ch>"]
 repository = "https://github.com/fire-lib/riji"
 edition = "2021"
 license = "MIT OR Apache-2.0"
